--- a/hybridq/modules/hybridq_array/hybridq_array/lib/Makefile
+++ b/hybridq/modules/hybridq_array/hybridq_array/lib/Makefile
@@ -100,34 +100,7 @@ $(OUTPUT_PATH)/hybridq.so: include/python_U.cpp \
     -DLOG2_PACK_SIZE=$(LOG2_PACK_SIZE)
 
 # Get name of swap library
-SWAP_LIBNAME = $(OUTPUT_PATH)/hybridq_swap_$(swap_array_type)_$(swap_npos).so
-
-# Get type for swap
-ifeq ($(swap_array_type), float16)
-	SWAP_ARRAY_TYPE = uint16_t
-else ifeq ($(swap_array_type), float32)
-	SWAP_ARRAY_TYPE = float
-else ifeq ($(swap_array_type), float64)
-	SWAP_ARRAY_TYPE = double
-else ifeq ($(swap_array_type), float128)
-	SWAP_ARRAY_TYPE = __float128
-else ifeq ($(swap_array_type), int8)
-	SWAP_ARRAY_TYPE = int8_t
-else ifeq ($(swap_array_type), int16)
-	SWAP_ARRAY_TYPE = int16_t
-else ifeq ($(swap_array_type), int32)
-	SWAP_ARRAY_TYPE = int32_t
-else ifeq ($(swap_array_type), int64)
-	SWAP_ARRAY_TYPE = int64_t
-else ifeq ($(swap_array_type), uint8)
-	SWAP_ARRAY_TYPE = uint8_t
-else ifeq ($(swap_array_type), uint16)
-	SWAP_ARRAY_TYPE = uint16_t
-else ifeq ($(swap_array_type), uint32)
-	SWAP_ARRAY_TYPE = uint32_t
-else ifeq ($(swap_array_type), uint64)
-	SWAP_ARRAY_TYPE = uint64_t
-endif
+SWAP_LIBNAME = $(OUTPUT_PATH)/hybridq_swap_$(swap_nbytes)_$(swap_npos).so
 
 # Define swap
 swap: $(SWAP_LIBNAME)
@@ -137,7 +110,7 @@ $(SWAP_LIBNAME): print_support \
 					       include/swap.cpp
 	$(COMPILE) $(filter-out $<, $^) -o $@ \
 		-DHYBRIDQ_ARRAY_SWAP_N_POS=$(swap_npos) \
-		-DHYBRIDQ_ARRAY_SWAP_ARRAY_TYPE=$(SWAP_ARRAY_TYPE)
+		-DHYBRIDQ_ARRAY_SWAP_N_BYTES=$(swap_nbytes)
 
 clean:
 	-rm -f $(OUTPUT_PATH)/hybridq.so
