Improve matrix-vector multiplication

--- a/hybridq/modules/hybridq_array/hybridq_array/lib/Makefile
+++ b/hybridq/modules/hybridq_array/hybridq_array/lib/Makefile
@@ -17,7 +17,27 @@
 OUTPUT_PATH ?= ./
 
 # Fix size of packs
-LOG2_PACK_SIZE ?= 0
+LOG2_PACK_SIZE ?= -1
+
+# Get type and number of bits. Types are:
+# 0: float
+# 1: unsigned
+# 2: signed
+DOT_NBITS := $(shell echo $(dot_type) | sed 's/[a-z]//g')
+DOT_TYPE := $(shell echo $(dot_type) | sed 's/[0-9]//g')
+ifeq ($(DOT_TYPE), float)
+	DOT_TYPE=0
+else ifeq ($(DOT_TYPE), uint)
+	DOT_TYPE=1
+else ifeq ($(DOT_TYPE), int)
+	DOT_TYPE=2
+else
+	DOT_TYPE=-1
+endif
+
+ifneq ($(dot_log2_pack_size),)
+	LOG2_PACK_SIZE := $(dot_log2_pack_size)
+endif
 
 # Set default compiler
 CXX ?= g++
@@ -63,7 +83,7 @@ avx2 := $(shell $(COMPILE) -x c++ -dM -E - < /dev/null | grep -i '__AVX2__' | he
 avx512 := $(shell $(COMPILE) -x c++ -dM -E - < /dev/null | grep -i '__AVX512' | head -n 1 | wc -l)
 
 # If not specified, infer pack size
-ifeq ($(LOG2_PACK_SIZE), 0)
+ifeq ($(LOG2_PACK_SIZE), -1)
   LOG2_PACK_SIZE := $(shell \
                       if [ $(avx512) -eq 1 ]; then \
                         echo 4; \
@@ -73,10 +93,6 @@ ifeq ($(LOG2_PACK_SIZE), 0)
                         echo 3; \
                       fi)
 endif
-
-.PHONY=all
-all: print_support \
-     $(OUTPUT_PATH)/hybridq.so
 
 .PHONY=print_support
 print_support:
@@ -91,19 +107,40 @@ print_support:
 	@# Print pack size
 	$(info # Size of Pack: 2^$(LOG2_PACK_SIZE))
 
-$(OUTPUT_PATH)/hybridq.so: include/python_U.cpp \
-                           include/U.h \
-                           include/utils.h \
-                           include/pack.h
-	@# Compile
-	$(COMPILE) $< -o $@ \
-    -DLOG2_PACK_SIZE=$(LOG2_PACK_SIZE)
+# Get name of dot library
+DOT_LIBNAME = $(OUTPUT_PATH)/hybridq_dot_$(dot_type)_$(LOG2_PACK_SIZE)_$(dot_npos).so
 
 # Get name of swap library
 SWAP_LIBNAME = $(OUTPUT_PATH)/hybridq_swap_$(swap_nbytes)_$(swap_npos).so
 
+# Define dot
+dot: $(DOT_LIBNAME)
+
 # Define swap
 swap: $(SWAP_LIBNAME)
+
+# Compile swap
+$(DOT_LIBNAME): include/dot.cpp include/*.h
+	@# Print support for OpenMP
+	$(info # Support OpenMP? $(is_openmp_supported))
+
+	@# Print support for AVX
+	$(info # Support AVX? $(shell (exit $(avx)) && echo no || echo yes))
+	$(info # Support AVX-2? $(shell (exit $(avx2)) && echo no || echo yes))
+	$(info # Support AVX-512? $(shell (exit $(avx512)) && echo no || echo yes))
+
+	@# Print pack size
+	$(info # Size of Pack: 2^$(LOG2_PACK_SIZE))
+
+	@# Print array type
+	$(info # Array type: $(dot_type))
+
+	@# Compile
+	$(COMPILE) $< -o $@ \
+		-DHYBRIDQ_ARRAY_DOT_LOG2_PACK_SIZE=$(LOG2_PACK_SIZE) \
+		-DHYBRIDQ_ARRAY_DOT_ARRAY_TYPE=$(DOT_TYPE) \
+		-DHYBRIDQ_ARRAY_DOT_ARRAY_NBITS=$(DOT_NBITS) \
+		-DHYBRIDQ_ARRAY_DOT_NPOS=$(dot_npos)
 
 # Compile swap
 $(SWAP_LIBNAME): include/swap.cpp
@@ -116,5 +153,5 @@ $(SWAP_LIBNAME): include/swap.cpp
 		-DHYBRIDQ_ARRAY_SWAP_N_BYTES=$(swap_nbytes)
 
 clean:
-	-rm -f $(OUTPUT_PATH)/hybridq.so
+	-rm -f $(OUTPUT_PATH)/hybridq_dot_*.so
 	-rm -f $(OUTPUT_PATH)/hybridq_swap_*.so
