Use `hybridq-options` for default values

--- a/hybridq/modules/hybridq_array/requirements.txt
+++ b/hybridq/modules/hybridq_array/requirements.txt
@@ -1,3 +1,4 @@
 autoray
 numpy
 opt_einsum
+hybridq-options @ git+https://github.com/nasa/hybridq@devel#egg=hybridq-options&subdirectory=hybridq/modules/hybridq_options
