--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        version: [cp37-cp37m, cp38-cp38, cp39-cp39, cp310-cp310]
+        version: [cp38-cp38, cp39-cp39, cp310-cp310]
 
     steps:
       - name: Checkout repository
@@ -57,7 +57,7 @@ jobs:
 
     strategy:
       matrix:
-        version: [cp37-cp37m, cp38-cp38, cp39-cp39, cp310-cp310]
+        version: [cp38-cp38, cp39-cp39, cp310-cp310]
         name: ${{fromJson(needs.collect.outputs.matrix)}}
 
     steps:
